--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Web API Auth</title>
+    <title>Client Server Scoping</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
     <link href="index.css" type="text/css" rel="stylesheet">
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
@@ -10,54 +10,36 @@
   <body>
     <nav class="navbar">
       <div class="nav-wrapper">
-        <a href="/index.html" class="brand-logo">Web API Authentication</a>
+        <a href="/index.html" class="brand-logo">Web Api Client Server Scoping</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="#">Lorem Ipsum</a></li>
-          <li><a href="#">Lorem Ipsum</a></li>
-          <li><a href="#">Lorem Ipsum</a></li>
+          <li><button id="button-1" style="margin-right:15px;" type="button" class="btn purple darken-4" data-heading="Lorem Ipsum">Data-Heading</button></li>
+          <li><button id="button-2" style="margin-right:15px;" type="button" class="btn indigo darken-4">Lorem Ipsum</button></li>
+          <li><button id="button-3" style="margin-right:15px;" type="button" class="btn lime darken-4">Lorem Ipsum</button></li>
         </ul>
       </div>
     </nav>
 
     <div class="container">
       <div class="row" style="margin-bottom: 10px;">
-        <h3 style="color: #006666; text-align:center;">Welcome aboard!</h3>
-      </div>
-      <div class="row">
-        <div class="col s12 m6 offset-m3 login-form" style="margin-top: 20px;">
-          <div class="card" style="background-color: hsl(148, 52%, 98%);">
-            <div class="card-content white-text">
-              <span class="card-title" style="color: #006666;">Sign In</span>
-              <p style="color: #006666;" id="error-message"></p>
-              <br>
-              <div class="row">
-                <form id="login-form" class="col s12" method="post">
-                  <div class="row">
-                    <div class="input-field col s12" style="color: #006666;">
-                      <input placeholder="Username" id="username" name="username" type="text" class="validate">
-                      <label for="username">Username</label>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="input-field col s12" style="color: #006666;">
-                      <input placeholder="Password" id="password" name="password" type="password" class="validate">
-                      <label for="password">Password</label>
-                    </div>
-                  </div>
-                  <button type="submit" class="btn teal darken-3">Login</button>
-                </form>
-              </div>
-            </div>
-            <div class="card-action">
-              <a href="register.html"><span class="light-blue-text text-accent-2">Register</span></a>
-            </div>
-          </div>
-        </div>
+        <h3 id="show" style="color: #006666; text-align:center;">Welcome aboard!</h3>
       </div>
     </div>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
-    <script src="index.js" charset="utf-8"></script>
+    <script type="text/javascript">
+      function getUrlParameter (name) {
+        name = name.replace(/[\[]/, '\\[').replace(/[\]]/, '\\]')
+        var regex = new RegExp('[\\?&]' + name + '=([^&#]*)')
+        var results = regex.exec(location.search)
+        return results === null ? '' : decodeURIComponent(results[1].replace(/\+/g, ' '))
+      }
+
+      $('#button-1').click(function () {
+        let attrVal = $('#button-1').attr('data-heading')
+        $('#show').text(attrVal)
+        console.log(document.URL);
+      })
+    </script>
   </body>
 </html>
